[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/kenneyUI-blue.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scripts/TheButton.gd" type="Script" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="P_Info" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )

[node name="CC_Buttons" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TheButton" type="Button" parent="CC_Buttons"]
unique_name_in_owner = true
margin_left = 590.0
margin_top = 310.0
margin_right = 690.0
margin_bottom = 410.0
rect_min_size = Vector2( 100, 100 )
text = "+1"
script = ExtResource( 3 )

[node name="MC_Info" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 83.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="HBC_Info" type="HBoxContainer" parent="MC_Info"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1250.0
margin_bottom = 53.0

[node name="L_Income" type="Label" parent="MC_Info/HBC_Info"]
margin_right = 60.0
margin_bottom = 23.0
size_flags_vertical = 6
text = "Income:"

[node name="V_Income" type="Label" parent="MC_Info/HBC_Info"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 73.0
margin_bottom = 23.0
text = "1"

[node name="FrameTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[connection signal="button_up" from="CC_Buttons/TheButton" to="." method="_on_TheButton_press"]
[connection signal="timeout" from="FrameTimer" to="." method="_on_FrameTimer_timeout"]
